src/parser/parser.output
Terminals unused in grammar

   TERR


State 90 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: %empty
    2                 | statement_list

    3 block: '{' '}'

    4 $@1: %empty

    5 block: '{' $@1 statement_list '}'

    6 statement_list: statement
    7               | statement_list statement

    8 statement: matched_statement
    9          | open_statement

   10 matched_statement: expression ';'
   11                  | expression error
   12                  | error ';'
   13                  | TIF '(' expression ')' matched_statement TELSE matched_statement
   14                  | iteration_statement
   15                  | block
   16                  | TOUTPUT expression ';'
   17                  | TOUTPUT expression error

   18 open_statement: TIF '(' expression ')' statement
   19               | TIF '(' expression ')' matched_statement TELSE open_statement

   20 iteration_statement: TWHILE '(' expression ')' statement
   21                    | TWHILE '(' expression error statement
   22                    | TWHILE error expression ')' statement

   23 expression: assignment_expression

   24 assignment_expression: logical_or_expression
   25                      | TID TASSIGN logical_or_expression

   26 logical_or_expression: logical_and_expression
   27                      | logical_or_expression TOR logical_and_expression

   28 logical_and_expression: equality_expression
   29                       | logical_and_expression TAND equality_expression

   30 equality_expression: relational_expression
   31                    | equality_expression TEQUAL relational_expression
   32                    | equality_expression TNEQUAL relational_expression

   33 relational_expression: additive_expression
   34                      | relational_expression TLESS additive_expression
   35                      | relational_expression TGR additive_expression
   36                      | relational_expression TLESS_EQ additive_expression
   37                      | relational_expression TGR_EQ additive_expression

   38 additive_expression: multiplicative_expression
   39                    | additive_expression TADD multiplicative_expression
   40                    | additive_expression TSUB multiplicative_expression

   41 multiplicative_expression: unary_expression
   42                          | multiplicative_expression TMUL unary_expression
   43                          | multiplicative_expression TDIV unary_expression
   44                          | multiplicative_expression TPERCENT unary_expression

   45 unary_expression: primary_expression
   46                 | TADD unary_expression
   47                 | TSUB unary_expression
   48                 | TEXCLAM unary_expression

   49 primary_expression: TID
   50                   | TNUM
   51                   | TINPUT
   52                   | '(' expression ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 13 18 19 20 21 52
')' (41) 13 18 19 20 22 52
';' (59) 10 12 16
'{' (123) 3 5
'}' (125) 3 5
error (256) 11 12 17 21 22
TNUM (258) 50
TID (259) 25 49
TWHILE (260) 20 21 22
TIF (261) 13 18 19
TOR (262) 27
TAND (263) 29
TLESS (264) 34
TGR (265) 35
TLESS_EQ (266) 36
TGR_EQ (267) 37
TEQUAL (268) 31
TNEQUAL (269) 32
TADD (270) 39 46
TSUB (271) 40 47
TMUL (272) 42
TDIV (273) 43
TINPUT (274) 51
TOUTPUT (275) 16 17
TASSIGN (276) 25
TEXCLAM (277) 48
TPERCENT (278) 44
TELSE (279) 13 19
TERR (280)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
translation_unit (32)
    on left: 1 2, on right: 0
block (33)
    on left: 3 5, on right: 15
$@1 (34)
    on left: 4, on right: 5
statement_list (35)
    on left: 6 7, on right: 2 5 7
statement (36)
    on left: 8 9, on right: 6 7 18 20 21 22
matched_statement (37)
    on left: 10 11 12 13 14 15 16 17, on right: 8 13 19
open_statement (38)
    on left: 18 19, on right: 9 19
iteration_statement (39)
    on left: 20 21 22, on right: 14
expression (40)
    on left: 23, on right: 10 11 13 16 17 18 19 20 21 22 52
assignment_expression (41)
    on left: 24 25, on right: 23
logical_or_expression (42)
    on left: 26 27, on right: 24 25 27
logical_and_expression (43)
    on left: 28 29, on right: 26 27 29
equality_expression (44)
    on left: 30 31 32, on right: 28 29 31 32
relational_expression (45)
    on left: 33 34 35 36 37, on right: 30 31 32 34 35 36 37
additive_expression (46)
    on left: 38 39 40, on right: 33 34 35 36 37 39 40
multiplicative_expression (47)
    on left: 41 42 43 44, on right: 38 39 40 42 43 44
unary_expression (48)
    on left: 45 46 47 48, on right: 41 42 43 44 46 47 48
primary_expression (49)
    on left: 49 50 51 52, on right: 45


State 0

    0 $accept: . translation_unit $end

    error    shift, and go to state 1
    TNUM     shift, and go to state 2
    TID      shift, and go to state 3
    TWHILE   shift, and go to state 4
    TIF      shift, and go to state 5
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TOUTPUT  shift, and go to state 9
    TEXCLAM  shift, and go to state 10
    '{'      shift, and go to state 11
    '('      shift, and go to state 12

    $end  reduce using rule 1 (translation_unit)

    translation_unit           go to state 13
    block                      go to state 14
    statement_list             go to state 15
    statement                  go to state 16
    matched_statement          go to state 17
    open_statement             go to state 18
    iteration_statement        go to state 19
    expression                 go to state 20
    assignment_expression      go to state 21
    logical_or_expression      go to state 22
    logical_and_expression     go to state 23
    equality_expression        go to state 24
    relational_expression      go to state 25
    additive_expression        go to state 26
    multiplicative_expression  go to state 27
    unary_expression           go to state 28
    primary_expression         go to state 29


State 1

   12 matched_statement: error . ';'

    ';'  shift, and go to state 30


State 2

   50 primary_expression: TNUM .

    $default  reduce using rule 50 (primary_expression)


State 3

   25 assignment_expression: TID . TASSIGN logical_or_expression
   49 primary_expression: TID .

    TASSIGN  shift, and go to state 31

    $default  reduce using rule 49 (primary_expression)


State 4

   20 iteration_statement: TWHILE . '(' expression ')' statement
   21                    | TWHILE . '(' expression error statement
   22                    | TWHILE . error expression ')' statement

    error  shift, and go to state 32
    '('    shift, and go to state 33


State 5

   13 matched_statement: TIF . '(' expression ')' matched_statement TELSE matched_statement
   18 open_statement: TIF . '(' expression ')' statement
   19               | TIF . '(' expression ')' matched_statement TELSE open_statement

    '('  shift, and go to state 34


State 6

   46 unary_expression: TADD . unary_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 35
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '('      shift, and go to state 12

    unary_expression    go to state 36
    primary_expression  go to state 29


State 7

   47 unary_expression: TSUB . unary_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 35
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '('      shift, and go to state 12

    unary_expression    go to state 37
    primary_expression  go to state 29


State 8

   51 primary_expression: TINPUT .

    $default  reduce using rule 51 (primary_expression)


State 9

   16 matched_statement: TOUTPUT . expression ';'
   17                  | TOUTPUT . expression error

    TNUM     shift, and go to state 2
    TID      shift, and go to state 3
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '('      shift, and go to state 12

    expression                 go to state 38
    assignment_expression      go to state 21
    logical_or_expression      go to state 22
    logical_and_expression     go to state 23
    equality_expression        go to state 24
    relational_expression      go to state 25
    additive_expression        go to state 26
    multiplicative_expression  go to state 27
    unary_expression           go to state 28
    primary_expression         go to state 29


State 10

   48 unary_expression: TEXCLAM . unary_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 35
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '('      shift, and go to state 12

    unary_expression    go to state 39
    primary_expression  go to state 29


State 11

    3 block: '{' . '}'
    5      | '{' . $@1 statement_list '}'

    '}'  shift, and go to state 40

    $default  reduce using rule 4 ($@1)

    $@1  go to state 41


State 12

   52 primary_expression: '(' . expression ')'

    TNUM     shift, and go to state 2
    TID      shift, and go to state 3
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '('      shift, and go to state 12

    expression                 go to state 42
    assignment_expression      go to state 21
    logical_or_expression      go to state 22
    logical_and_expression     go to state 23
    equality_expression        go to state 24
    relational_expression      go to state 25
    additive_expression        go to state 26
    multiplicative_expression  go to state 27
    unary_expression           go to state 28
    primary_expression         go to state 29


State 13

    0 $accept: translation_unit . $end

    $end  shift, and go to state 43


State 14

   15 matched_statement: block .

    $default  reduce using rule 15 (matched_statement)


State 15

    2 translation_unit: statement_list .
    7 statement_list: statement_list . statement

    error    shift, and go to state 1
    TNUM     shift, and go to state 2
    TID      shift, and go to state 3
    TWHILE   shift, and go to state 4
    TIF      shift, and go to state 5
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TOUTPUT  shift, and go to state 9
    TEXCLAM  shift, and go to state 10
    '{'      shift, and go to state 11
    '('      shift, and go to state 12

    $end  reduce using rule 2 (translation_unit)

    block                      go to state 14
    statement                  go to state 44
    matched_statement          go to state 17
    open_statement             go to state 18
    iteration_statement        go to state 19
    expression                 go to state 20
    assignment_expression      go to state 21
    logical_or_expression      go to state 22
    logical_and_expression     go to state 23
    equality_expression        go to state 24
    relational_expression      go to state 25
    additive_expression        go to state 26
    multiplicative_expression  go to state 27
    unary_expression           go to state 28
    primary_expression         go to state 29


State 16

    6 statement_list: statement .

    $default  reduce using rule 6 (statement_list)


State 17

    8 statement: matched_statement .

    $default  reduce using rule 8 (statement)


State 18

    9 statement: open_statement .

    $default  reduce using rule 9 (statement)


State 19

   14 matched_statement: iteration_statement .

    $default  reduce using rule 14 (matched_statement)


State 20

   10 matched_statement: expression . ';'
   11                  | expression . error

    error  shift, and go to state 45
    ';'    shift, and go to state 46


State 21

   23 expression: assignment_expression .

    $default  reduce using rule 23 (expression)


State 22

   24 assignment_expression: logical_or_expression .
   27 logical_or_expression: logical_or_expression . TOR logical_and_expression

    TOR  shift, and go to state 47

    $default  reduce using rule 24 (assignment_expression)


State 23

   26 logical_or_expression: logical_and_expression .
   29 logical_and_expression: logical_and_expression . TAND equality_expression

    TAND  shift, and go to state 48

    $default  reduce using rule 26 (logical_or_expression)


State 24

   28 logical_and_expression: equality_expression .
   31 equality_expression: equality_expression . TEQUAL relational_expression
   32                    | equality_expression . TNEQUAL relational_expression

    TEQUAL   shift, and go to state 49
    TNEQUAL  shift, and go to state 50

    $default  reduce using rule 28 (logical_and_expression)


State 25

   30 equality_expression: relational_expression .
   34 relational_expression: relational_expression . TLESS additive_expression
   35                      | relational_expression . TGR additive_expression
   36                      | relational_expression . TLESS_EQ additive_expression
   37                      | relational_expression . TGR_EQ additive_expression

    TLESS     shift, and go to state 51
    TGR       shift, and go to state 52
    TLESS_EQ  shift, and go to state 53
    TGR_EQ    shift, and go to state 54

    $default  reduce using rule 30 (equality_expression)


State 26

   33 relational_expression: additive_expression .
   39 additive_expression: additive_expression . TADD multiplicative_expression
   40                    | additive_expression . TSUB multiplicative_expression

    TADD  shift, and go to state 55
    TSUB  shift, and go to state 56

    $default  reduce using rule 33 (relational_expression)


State 27

   38 additive_expression: multiplicative_expression .
   42 multiplicative_expression: multiplicative_expression . TMUL unary_expression
   43                          | multiplicative_expression . TDIV unary_expression
   44                          | multiplicative_expression . TPERCENT unary_expression

    TMUL      shift, and go to state 57
    TDIV      shift, and go to state 58
    TPERCENT  shift, and go to state 59

    $default  reduce using rule 38 (additive_expression)


State 28

   41 multiplicative_expression: unary_expression .

    $default  reduce using rule 41 (multiplicative_expression)


State 29

   45 unary_expression: primary_expression .

    $default  reduce using rule 45 (unary_expression)


State 30

   12 matched_statement: error ';' .

    $default  reduce using rule 12 (matched_statement)


State 31

   25 assignment_expression: TID TASSIGN . logical_or_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 35
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '('      shift, and go to state 12

    logical_or_expression      go to state 60
    logical_and_expression     go to state 23
    equality_expression        go to state 24
    relational_expression      go to state 25
    additive_expression        go to state 26
    multiplicative_expression  go to state 27
    unary_expression           go to state 28
    primary_expression         go to state 29


State 32

   22 iteration_statement: TWHILE error . expression ')' statement

    TNUM     shift, and go to state 2
    TID      shift, and go to state 3
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '('      shift, and go to state 12

    expression                 go to state 61
    assignment_expression      go to state 21
    logical_or_expression      go to state 22
    logical_and_expression     go to state 23
    equality_expression        go to state 24
    relational_expression      go to state 25
    additive_expression        go to state 26
    multiplicative_expression  go to state 27
    unary_expression           go to state 28
    primary_expression         go to state 29


State 33

   20 iteration_statement: TWHILE '(' . expression ')' statement
   21                    | TWHILE '(' . expression error statement

    TNUM     shift, and go to state 2
    TID      shift, and go to state 3
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '('      shift, and go to state 12

    expression                 go to state 62
    assignment_expression      go to state 21
    logical_or_expression      go to state 22
    logical_and_expression     go to state 23
    equality_expression        go to state 24
    relational_expression      go to state 25
    additive_expression        go to state 26
    multiplicative_expression  go to state 27
    unary_expression           go to state 28
    primary_expression         go to state 29


State 34

   13 matched_statement: TIF '(' . expression ')' matched_statement TELSE matched_statement
   18 open_statement: TIF '(' . expression ')' statement
   19               | TIF '(' . expression ')' matched_statement TELSE open_statement

    TNUM     shift, and go to state 2
    TID      shift, and go to state 3
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '('      shift, and go to state 12

    expression                 go to state 63
    assignment_expression      go to state 21
    logical_or_expression      go to state 22
    logical_and_expression     go to state 23
    equality_expression        go to state 24
    relational_expression      go to state 25
    additive_expression        go to state 26
    multiplicative_expression  go to state 27
    unary_expression           go to state 28
    primary_expression         go to state 29


State 35

   49 primary_expression: TID .

    $default  reduce using rule 49 (primary_expression)


State 36

   46 unary_expression: TADD unary_expression .

    $default  reduce using rule 46 (unary_expression)


State 37

   47 unary_expression: TSUB unary_expression .

    $default  reduce using rule 47 (unary_expression)


State 38

   16 matched_statement: TOUTPUT expression . ';'
   17                  | TOUTPUT expression . error

    error  shift, and go to state 64
    ';'    shift, and go to state 65


State 39

   48 unary_expression: TEXCLAM unary_expression .

    $default  reduce using rule 48 (unary_expression)


State 40

    3 block: '{' '}' .

    $default  reduce using rule 3 (block)


State 41

    5 block: '{' $@1 . statement_list '}'

    error    shift, and go to state 1
    TNUM     shift, and go to state 2
    TID      shift, and go to state 3
    TWHILE   shift, and go to state 4
    TIF      shift, and go to state 5
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TOUTPUT  shift, and go to state 9
    TEXCLAM  shift, and go to state 10
    '{'      shift, and go to state 11
    '('      shift, and go to state 12

    block                      go to state 14
    statement_list             go to state 66
    statement                  go to state 16
    matched_statement          go to state 17
    open_statement             go to state 18
    iteration_statement        go to state 19
    expression                 go to state 20
    assignment_expression      go to state 21
    logical_or_expression      go to state 22
    logical_and_expression     go to state 23
    equality_expression        go to state 24
    relational_expression      go to state 25
    additive_expression        go to state 26
    multiplicative_expression  go to state 27
    unary_expression           go to state 28
    primary_expression         go to state 29


State 42

   52 primary_expression: '(' expression . ')'

    ')'  shift, and go to state 67


State 43

    0 $accept: translation_unit $end .

    $default  accept


State 44

    7 statement_list: statement_list statement .

    $default  reduce using rule 7 (statement_list)


State 45

   11 matched_statement: expression error .

    $default  reduce using rule 11 (matched_statement)


State 46

   10 matched_statement: expression ';' .

    $default  reduce using rule 10 (matched_statement)


State 47

   27 logical_or_expression: logical_or_expression TOR . logical_and_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 35
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '('      shift, and go to state 12

    logical_and_expression     go to state 68
    equality_expression        go to state 24
    relational_expression      go to state 25
    additive_expression        go to state 26
    multiplicative_expression  go to state 27
    unary_expression           go to state 28
    primary_expression         go to state 29


State 48

   29 logical_and_expression: logical_and_expression TAND . equality_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 35
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '('      shift, and go to state 12

    equality_expression        go to state 69
    relational_expression      go to state 25
    additive_expression        go to state 26
    multiplicative_expression  go to state 27
    unary_expression           go to state 28
    primary_expression         go to state 29


State 49

   31 equality_expression: equality_expression TEQUAL . relational_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 35
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '('      shift, and go to state 12

    relational_expression      go to state 70
    additive_expression        go to state 26
    multiplicative_expression  go to state 27
    unary_expression           go to state 28
    primary_expression         go to state 29


State 50

   32 equality_expression: equality_expression TNEQUAL . relational_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 35
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '('      shift, and go to state 12

    relational_expression      go to state 71
    additive_expression        go to state 26
    multiplicative_expression  go to state 27
    unary_expression           go to state 28
    primary_expression         go to state 29


State 51

   34 relational_expression: relational_expression TLESS . additive_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 35
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '('      shift, and go to state 12

    additive_expression        go to state 72
    multiplicative_expression  go to state 27
    unary_expression           go to state 28
    primary_expression         go to state 29


State 52

   35 relational_expression: relational_expression TGR . additive_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 35
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '('      shift, and go to state 12

    additive_expression        go to state 73
    multiplicative_expression  go to state 27
    unary_expression           go to state 28
    primary_expression         go to state 29


State 53

   36 relational_expression: relational_expression TLESS_EQ . additive_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 35
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '('      shift, and go to state 12

    additive_expression        go to state 74
    multiplicative_expression  go to state 27
    unary_expression           go to state 28
    primary_expression         go to state 29


State 54

   37 relational_expression: relational_expression TGR_EQ . additive_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 35
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '('      shift, and go to state 12

    additive_expression        go to state 75
    multiplicative_expression  go to state 27
    unary_expression           go to state 28
    primary_expression         go to state 29


State 55

   39 additive_expression: additive_expression TADD . multiplicative_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 35
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '('      shift, and go to state 12

    multiplicative_expression  go to state 76
    unary_expression           go to state 28
    primary_expression         go to state 29


State 56

   40 additive_expression: additive_expression TSUB . multiplicative_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 35
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '('      shift, and go to state 12

    multiplicative_expression  go to state 77
    unary_expression           go to state 28
    primary_expression         go to state 29


State 57

   42 multiplicative_expression: multiplicative_expression TMUL . unary_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 35
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '('      shift, and go to state 12

    unary_expression    go to state 78
    primary_expression  go to state 29


State 58

   43 multiplicative_expression: multiplicative_expression TDIV . unary_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 35
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '('      shift, and go to state 12

    unary_expression    go to state 79
    primary_expression  go to state 29


State 59

   44 multiplicative_expression: multiplicative_expression TPERCENT . unary_expression

    TNUM     shift, and go to state 2
    TID      shift, and go to state 35
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TEXCLAM  shift, and go to state 10
    '('      shift, and go to state 12

    unary_expression    go to state 80
    primary_expression  go to state 29


State 60

   25 assignment_expression: TID TASSIGN logical_or_expression .
   27 logical_or_expression: logical_or_expression . TOR logical_and_expression

    TOR  shift, and go to state 47

    $default  reduce using rule 25 (assignment_expression)


State 61

   22 iteration_statement: TWHILE error expression . ')' statement

    ')'  shift, and go to state 81


State 62

   20 iteration_statement: TWHILE '(' expression . ')' statement
   21                    | TWHILE '(' expression . error statement

    error  shift, and go to state 82
    ')'    shift, and go to state 83


State 63

   13 matched_statement: TIF '(' expression . ')' matched_statement TELSE matched_statement
   18 open_statement: TIF '(' expression . ')' statement
   19               | TIF '(' expression . ')' matched_statement TELSE open_statement

    ')'  shift, and go to state 84


State 64

   17 matched_statement: TOUTPUT expression error .

    $default  reduce using rule 17 (matched_statement)


State 65

   16 matched_statement: TOUTPUT expression ';' .

    $default  reduce using rule 16 (matched_statement)


State 66

    5 block: '{' $@1 statement_list . '}'
    7 statement_list: statement_list . statement

    error    shift, and go to state 1
    TNUM     shift, and go to state 2
    TID      shift, and go to state 3
    TWHILE   shift, and go to state 4
    TIF      shift, and go to state 5
    TADD     shift, and go to state 6
    TSUB     shift, and go to state 7
    TINPUT   shift, and go to state 8
    TOUTPUT  shift, and go to state 9
    TEXCLAM  shift, and go to state 10
    '{'      shift, and go to state 11
    '}'      shift, and go to state 85
    '('      shift, and go to state 12

    block                      go to state 14
    statement                  go to state 44
    matched_statement          go to state 17
    open_statement             go to state 18
    iteration_statement        go to state 19
    expression                 go to state 20
    assignment_expression      go to state 21
    logical_or_expression      go to state 22
    logical_and_expression     go to state 23
    equality_expression        go to state 24
    relational_expression      go to state 25
    additive_expression        go to state 26
    multiplicative_expression  go to state 27
    unary_expression           go to state 28
    primary_expression         go to state 29


State 67

   52 primary_expression: '(' expression ')' .

    $default  reduce using rule 52 (primary_expression)


State 68

   27 logical_or_expression: logical_or_expression TOR logical_and_expression .
   29 logical_and_expression: logical_and_expression . TAND equality_expression

    TAND  shift, and go to state 48

    $default  reduce using rule 27 (logical_or_expression)


State 69

   29 logical_and_expression: logical_and_expression TAND equality_expression .
   31 equality_expression: equality_expression . TEQUAL relational_expression
   32                    | equality_expression . TNEQUAL relational_expression

    TEQUAL   shift, and go to state 49
    TNEQUAL  shift, and go to state 50
